[package]
name = "program-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.8"

[dev-dependencies]
soroban-sdk = { version = "22.0.8", features = ["testutils"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
