[package]
name = "bounty-escrow"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = "21.0.0"
grainlify-common = { path = "../../../common" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
